# ros2-pipewire-bridge

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
pw_client/: CMakeLists.txt  package.xml
pw_client/include/pw_client/: client.hpp  pod.hpp
pw_client/src/: audio_client.hpp  client.cpp  client.hpp  ilogger.hpp  pw_client.cpp  ros_logger.hpp
pw_client/src/logger/: ilogger.hpp  ros.hpp  stdout.hpp
pw_client/src/utils/: pw_lock.hpp
pw_client/test/: test_client.cpp
pw_interfaces/: CMakeLists.txt  package.xml
pw_interfaces/msgs/: Buffer.msg  Data.msg  DataChunk.msg  Meta.msg  Pod.msg
pw_sink/: CMakeLists.txt  package.xml
pw_sink/src/: pw_sink.cpp
pw_source/: CMakeLists.txt  package.xml
pw_source/src/: pw_source.cpp
